applications/miniflux/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: miniflux
  labels:
    app.kubernetes.io/name: miniflux
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: miniflux
  ports:
    - name: http
      port: 8080
      targetPort: http
