applications/miniflux/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-tailscale
  namespace: miniflux
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - miniflux
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
