applications/miniflux/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux
  namespace: miniflux
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - miniflux.mrcontainer.nl
      secretName: miniflux-tls
  rules:
    - host: miniflux.mrcontainer.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux
                port:
                  number: 8080
